--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,10 +7,9 @@
     <title>Admin</title>
 </head>
 <body>
+    {% extends "common/left_sidebar.html" %}
 
-    <div id="main">
-        this is admin
-    </div>
+
     
 </body>
 </html>
