--- a/templates/login.html
+++ b/templates/login.html
@@ -17,6 +17,13 @@
             margin-top: 200px;
             border: 1px solid red;
         }
+        #login input{
+            width: 100%;
+            height: 50px;
+            margin-top: 5px;
+            font-size: 20px;
+        }
+
     </style>
 </head>
 <body>
@@ -24,8 +31,10 @@
     <div id="main">
         <div id="login">
             <form action="/admin" method="post">
-                <input type="text" name="username" placeholder="username">
-                <input type="text" name="password" placeholder="password">
+                <input type="text" name="username" placeholder="username" required="required">
+                <br />
+                <input type="text" name="password" placeholder="password" required="required">
+                <br />
                 <input type="submit" name="submit" value="login">
             </form>
         </div>
