--- a/templates/admin.html
+++ b/templates/admin.html
@@ -7,7 +7,15 @@
     <title>Admin</title>
 </head>
 <body>
-    {% extends "common/left_sidebar.html" %}
+
+    {% include "common/left_sidebar.html" %}
+
+
+    {% include "common/right_body1.html" %}
+
+
+
+
 
 
     
