--- a/templates/common/left_sidebar.html
+++ b/templates/common/left_sidebar.html
@@ -2,64 +2,10 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Admin</title>
 
-    <style>
-        * {
-            margin: 0;
-            padding: 0;
-        }
-
-        #left {
-            width: 200px;
-            float: left;
-            display: flex;
-        }
-
-        ul {
-            list-style: none;
-        }
-
-        ul li {
-            border: 1px solid red;
-        }
-
-        li a {
-            font-size: 30px;
-            display: block;
-            text-decoration: none;
-        }
-
-        li a:hover {
-            background-color: blue;
-            color: wheat;
-        }
-
-        #right {
-            border: 1px solid red;
-            width: 900px;
-            height: 600px;
-            float: right;
-            margin-right: 500px;
+    <link rel="stylesheet" href="{{url_for('static',filename='css/left_sidebar.css')}}">
 
 
-        }
-
-        .box {
-            /* 超出部分隐藏 */
-            overflow: hidden;
-            display: flex;
-        }
-
-        .content {
-            width: 900px;
-            height: 600px;
-            flex-shrink: 0;
-        }
-    </style>
 </head>
 
 <body>
@@ -70,34 +16,12 @@
                 <li><a href="#main">主页</a></li>
                 <li><a href="#result">结果</a></li>
                 <li><a href="#friend">友情链接</a></li>
+                <li><a href="#tools">工具</a></li>
                 <li><a href="#about">关于</a></li>
             </ul>
         </div>
 
-        <div id="right">
-            <section>
-                <div class="box">
-                    
-                    <div id="main" class="content">
-
-                    </div>
-                    
-                    <div id="result" class="content">
-
-                    </div>
-                    
-                    <div id="friend" class="content">
-
-                    </div>
-
-                    <div id="about" class="content">
-
-                    </div>
-
-                    
-                </div>
-            </section>
-        </div>
+       
     </div>
 
 </body>
