--- a/templates/common/right_body1.html
+++ b/templates/common/right_body1.html
@@ -16,7 +16,7 @@
 
                 <div id="main" class="content">
 
-                    输入url:<input type="text">
+                    输入target:<input type="text" name="target">
                     <br />
 
                     <div id="tools_all">
@@ -32,7 +32,6 @@
                         <button>scaninfo</button>
                         <button>httpx</button>
                         <button>>fscan</button>
-
 
                     </div>
 
